--- a/lib/web/docs/app.css
+++ b/lib/web/docs/app.css
@@ -61,6 +61,10 @@ body {
     color:#222;
 }
 
+.side-entry {
+    cursor:pointer;
+}
+
 .bd-sidebar {
     position: -webkit-sticky;
     position: sticky;
